src/test/ui/resolve-error.stderr
error: cannot find derive macro `FooWithLongNan` in this scope
  --> $DIR/resolve-error.rs:36:10
   |
36 | #[derive(FooWithLongNan)]
   |          ^^^^^^^^^^^^^^
   |
   = help: did you mean `FooWithLongName`?

error: cannot find attribute macro `attr_proc_macra` in this scope
  --> $DIR/resolve-error.rs:39:3
   |
39 | #[attr_proc_macra]
   |   ^^^^^^^^^^^^^^^
   |
   = help: did you mean `attr_proc_macro`?

error: cannot find attribute macro `FooWithLongNan` in this scope
  --> $DIR/resolve-error.rs:42:3
   |
42 | #[FooWithLongNan]
   |   ^^^^^^^^^^^^^^

error: cannot find derive macro `Dlone` in this scope
  --> $DIR/resolve-error.rs:45:10
   |
45 | #[derive(Dlone)]
   |          ^^^^^
   |
   = help: did you mean `Clone`?

error: cannot find derive macro `Dlona` in this scope
  --> $DIR/resolve-error.rs:48:10
   |
48 | #[derive(Dlona)]
   |          ^^^^^
   |
   = help: did you mean `Clona`?

error: cannot find derive macro `attr_proc_macra` in this scope
  --> $DIR/resolve-error.rs:51:10
   |
51 | #[derive(attr_proc_macra)]
   |          ^^^^^^^^^^^^^^^

error: cannot find macro `FooWithLongNama!` in this scope
  --> $DIR/resolve-error.rs:55:5
   |
55 |     FooWithLongNama!();
   |     ^^^^^^^^^^^^^^^
   |
   = help: did you mean `FooWithLongNam!`?

error: cannot find macro `attr_proc_macra!` in this scope
  --> $DIR/resolve-error.rs:57:5
   |
57 |     attr_proc_macra!();
   |     ^^^^^^^^^^^^^^^
   |
   = help: did you mean `attr_proc_mac!`?

error: cannot find macro `Dlona!` in this scope
  --> $DIR/resolve-error.rs:59:5
   |
59 |     Dlona!();
   |     ^^^^^

error: cannot find macro `bang_proc_macrp!` in this scope
  --> $DIR/resolve-error.rs:61:5
   |
61 |     bang_proc_macrp!();
   |     ^^^^^^^^^^^^^^^
   |
   = help: did you mean `bang_proc_macro!`?

error: aborting due to 10 previous errors

